@@ -1,3 +1,9 @@
+2009-03-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Added a function to bulk replace special characters
+   inside marked text by keybinding
+
+
 2009-03-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Don't offer insert environment dialog in case of no document is open.
